--- a/roles/radiusdesk/tasks/Freeradius_Debian.yml
+++ b/roles/radiusdesk/tasks/Freeradius_Debian.yml
@@ -1,35 +1,35 @@
 ---
-- name: Adding RadiusDesk MAO Apt Repository Key (Ubuntu 14+)
+- name: Adding RadiusDesk MAO Apt Repository Key (Ubuntu 14+/Debian)
   apt_key: 
     url={{ mao_apt_repo_key }}
     state=present
     validate_certs=False
 
-- name: Adding RadiusDesk MAO Apt Main Repository (Ubuntu 14+)
+- name: Adding RadiusDesk MAO Apt Main Repository (Ubuntu 14+/Debian)
   apt_repository:
     repo="{{ mao_apt_ppa_repo }}"
     state=present
 
-- name: Installing Freeradius for RadiusDesk (Ubuntu 14+)
+- name: Installing Freeradius for RadiusDesk (Ubuntu 14+/Debian)
   apt:
     name={{ item }}
     state=present
     update_cache=yes
   with_items: "{{ freeradius_pkgs }}"
 
-- name: Checking if we already have Freeradius Configuration Directory Backup (Ubuntu 14+)
+- name: Checking if we already have Freeradius Configuration Directory Backup (Ubuntu 14+/Debian)
   stat:
     path="{{ freeradius_conf_dir | quote }}_orig"
   register: fr_bk
 
-- name: Renaming Freeradius Configuration Directory (Ubuntu 14+)
+- name: Renaming Freeradius Configuration Directory (Ubuntu 14+/Debian)
   shell: cp -afR {{ freeradius_conf_dir | quote }} {{ freeradius_conf_dir | quote }}_orig
   when: fr_bk.stat.exists == False
 
-- name: Removing Old Freeradius Configuration Directory (Ubuntu 14+)
+- name: Removing Old Freeradius Configuration Directory (Ubuntu 14+/Debian)
   shell: rm -rf {{ freeradius_conf_dir | quote }}
 
-- name: Extracting RadiusDesk Freeradius Configuration (Ubuntu 14+)
+- name: Extracting RadiusDesk Freeradius Configuration (Ubuntu 14+/Debian)
   unarchive:
     src="{{ nginx_webroot }}/cake2/rd_cake/Setup/Radius/freeradius-3-radiusdesk.tar.gz"
     dest={{ temp_src_dir }}/
@@ -38,13 +38,13 @@
     mode=0664
     copy=no
 
-- name: Configuring Freeradius Configuration Directory (Ubuntu 14+)
+- name: Configuring Freeradius Configuration Directory (Ubuntu 14+/Debian)
   shell: 
     "mv {{ temp_src_dir | quote }}/freeradius {{ freeradius_conf_dir | quote }} &&
     chown -R {{ freeradius_user | quote }}:{{ freeradius_group | quote }} {{ freeradius_conf_dir | quote }} &&
     chmod -R 0755 {{ freeradius_conf_dir | quote }}"
 
-- name: Configuring RadiusDesk Freeradius radiusd.conf (Ubuntu 14+)
+- name: Configuring RadiusDesk Freeradius radiusd.conf (Ubuntu 14+/Debian)
   template: 
     dest={{ freeradius_conf_dir }}/radiusd.conf
     owner={{ freeradius_user }}
@@ -52,7 +52,7 @@
     mode=0664
     src="radius/radiusd.conf.j2"
 
-- name: Configuring RadiusDesk Freeradius Dictionary (Ubuntu 14+)
+- name: Configuring RadiusDesk Freeradius Dictionary (Ubuntu 14+/Debian)
   template: 
     dest={{ freeradius_conf_dir }}/dictionary
     owner={{ freeradius_user }}
@@ -60,13 +60,13 @@
     mode=0664
     src="radius/dictionary.j2"
 
-- name: Configuring RadiusDesk Freeradius Checkrad Script (Ubuntu 14+)
+- name: Configuring RadiusDesk Freeradius Checkrad Script (Ubuntu 14+/Debian)
   template: 
     dest={{ freeradius_sbin_dir }}/checkrad
     mode=0777
     src="radius/checkrad.j2"
 
-- name: Configuring RadiusDesk Freeradius Dynamic Clients (Ubuntu 14+)
+- name: Configuring RadiusDesk Freeradius Dynamic Clients (Ubuntu 14+/Debian)
   template: 
     dest="{{ freeradius_conf_dir }}/sites-enabled/dynamic-clients"
     owner={{ freeradius_user }}
@@ -74,13 +74,13 @@
     mode=0644
     src="radius/dynamic-clients.j2"
     
-- name: Correcting radclient paths for radscenario.pl Script (Ubuntu 14+)
+- name: Correcting radclient paths for radscenario.pl Script (Ubuntu 14+/Debian)
   template: 
     dest="{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radscenario.pl"
     mode=0777
     src="radius/radscenario.pl.j2"
 
-- name: Correcting RadiusDesk paths for Freeradius (Ubuntu 14+)
+- name: Correcting RadiusDesk paths for Freeradius (Ubuntu 14+/Debian)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/RadiusDesk.php"
     group={{ web_group }}
@@ -88,7 +88,7 @@
     src=RadiusDesk.php.j2
     validate='php -l %s'
 
-- name: Correcting MESHDesk paths for Freeradius (Ubuntu 14+)
+- name: Correcting MESHDesk paths for Freeradius (Ubuntu 14+/Debian)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/MESHdesk.php"
     group={{ web_group }}
@@ -96,7 +96,7 @@
     src=MESHdesk.php.j2
     validate='php -l %s'
 
-- name: Correcting APProfiles paths for Freeradius (Ubuntu 14+)
+- name: Correcting APProfiles paths for Freeradius (Ubuntu 14+/Debian)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/ApProfiles.php"
     group={{ web_group }}
@@ -104,13 +104,13 @@
     src=ApProfiles.php.j2
     validate='php -l %s'
 
-- name: Configuring radmin_wrapper.pl Script for RadiusDesk (Ubuntu 14+)
+- name: Configuring radmin_wrapper.pl Script for RadiusDesk (Ubuntu 14+/Debian)
   template: 
     dest="{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radmin_wrapper.pl"
     src="radius/radmin_wrapper.pl.j2"
     mode=0777
 
-- name: Disabling sudoers Requiretty Option (Ubuntu 14+)
+- name: Disabling sudoers Requiretty Option (Ubuntu 14+/Debian)
   lineinfile:
     dest: /etc/sudoers
     state: present
@@ -118,7 +118,7 @@
     line: '#Defaults    requiretty'
     validate: 'visudo -cf %s'
 
-- name: Adding Webroot User to sudoers (Ubuntu 14+)
+- name: Adding Webroot User to sudoers (Ubuntu 14+/Debian)
   lineinfile:
     dest: /etc/sudoers
     state: present
@@ -127,7 +127,7 @@
     line: '{{ web_user }} ALL = NOPASSWD:{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radmin_wrapper.pl'
     validate: 'visudo -cf %s'
 
-- name: Ensuring Freeradius is ready for use (Ubuntu 14+)
+- name: Ensuring Freeradius is ready for use (Ubuntu 14+/Debian)
   service: 
     enabled=yes
     name={{ freeradius_service_name }}
