--- a/roles/radiusdesk/tasks/main.yml
+++ b/roles/radiusdesk/tasks/main.yml
@@ -2,14 +2,19 @@
 - name: Checking for Supported Ubuntu Release
   fail:
     msg="{{ ansible_distribution }} {{ ansible_distribution_version }} is not supported by RADIUSDesk Installer"
-  when: ansible_distribution == 'Ubuntu' and (ansible_distribution_version|int < 14 or ansible_distribution_version|int >= 17)
+  when: (ansible_distribution == 'Ubuntu') and (ansible_distribution_version|int < 14 or ansible_distribution_version|int >= 17)
+
+- name: Checking for Supported Debian Release
+  fail:
+    msg="{{ ansible_distribution }} {{ ansible_distribution_release }} is not supported by RADIUSDesk Installer"
+  when: (ansible_distribution == 'Debian' and ansible_distribution_release != 'jessie')
 
 - name: Checking for Supported RHEL/CentOS Release
   fail:
     msg="{{ ansible_distribution }} {{ ansible_distribution_version }} is not supported by RADIUSDesk Installer"
   when: ansible_os_family == 'RedHat' and (ansible_distribution_major_version|int < 6 or ansible_distribution_major_version|int > 7)
 
-- name: Adding RadiusDesk Variables (Ubuntu 14+)
+- name: Adding RadiusDesk Variables (Ubuntu 14+/Debian)
   include_vars: "{{ ansible_os_family }}.yml"
   when: ansible_os_family == 'Debian'
 
@@ -17,41 +22,40 @@
   include_vars: "{{ ansible_os_family }}.yml"
   when: ansible_os_family == 'RedHat' and ansible_distribution_version >= '6'
 
-- name: RadiusDesk Nginx Setup (Ubuntu 14+)
+- name: RadiusDesk Nginx Setup (Ubuntu 14+/Debian)
   include: Nginx_Debian.yml
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14'
 
 - name: RadiusDesk Nginx Setup (RHEL/CentOS 6+)
   include: "Nginx_RedHat.yml"
   when: ansible_os_family == 'RedHat' and ansible_distribution_version >= '6'
 
-- name: RadiusDesk Freeradius Setup (Ubuntu 14+)
+- name: RadiusDesk Freeradius Setup (Ubuntu 14+/Debian)
   include: "Freeradius_Debian.yml"
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14'
+  when: (ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14') or ansible_distribution == 'Debian'
 
 - name: RadiusDesk Freeradius Setup (RHEL/CentOS 6+)
   include: "Freeradius_RedHat.yml"
   when: ansible_os_family == 'RedHat' and ansible_distribution_version >= '6'
 
-- name: RadiusDesk Nodejs Setup (Ubuntu 14+)
+- name: RadiusDesk Nodejs Setup (Ubuntu 14+/Debian)
   include: "Nodejs_Debian.yml"
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14'
+  when: (ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14') or ansible_distribution == 'Debian'
 
 - name: RadiusDesk Nodejs Setup (RHEL/CentOS 6+)
   include: "Nodejs_RedHat.yml"
   when: ansible_os_family == 'RedHat' and ansible_distribution_version >= '6'
 
-- name: RadiusDesk PPTPD Setup (Ubuntu 14+)
+- name: RadiusDesk PPTPD Setup (Ubuntu 14+/Debian)
   include: "Pptpd_Debian.yml"
-  when: enable_pptpd_support and ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14'
+  when: (ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14') or ansible_distribution == 'Debian'
 
 - name: RadiusDesk PPTPD Setup (RHEL/CentOS 6+)
   include: "Pptpd_RedHat.yml"
   when: enable_pptpd_support and ansible_os_family == 'RedHat' and ansible_distribution_version >= '6'
 
-- name: RadiusDesk CoovaChilli Setup (Ubuntu 14+)
+- name: RadiusDesk CoovaChilli Setup (Ubuntu 14+/Debian)
   include: "Coovachilli_Debian.yml"
-  when: enable_coovachilli_support and ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14'
+  when: (ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14') or ansible_distribution == 'Debian'
 
 - name: RadiusDesk CoovaChilli Setup (RHEL/CentOS 6+)
   include: "Coovachilli_RedHat.yml"
