--- a/roles/radiusdesk/tasks/Nginx_Debian.yml
+++ b/roles/radiusdesk/tasks/Nginx_Debian.yml
@@ -270,6 +270,7 @@
     login_user=root
     login_password={{ mysql_root_password }}
   with_items: "{{ mysql_db_hosts }}"
+  when: false
 
 - name: Creating RadiusDesk Database (Ubuntu 14+/Debian)
   mysql_db:
